# target-harvest-engine

./: README.md  meltano.yml  pyproject.toml  target-harvest-engine.sh
target_harvest_engine/: client.py  sinks.py  target.py
target_harvest_engine/tests/: conftest.py  test_core.py  test_med.py
target_harvest_engine/tests/data_files/: example.stream  missing_property_example.stream  type_mismatch_example.stream
