[tool.poetry]
name = "target-harvest-engine"
version = "0.0.1"
description = "`target-harvest-engine` is a Singer target for HarvestEngine, built with the Meltano SDK for Singer Targets."
authors = ["Carl Watkins"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.6.1"
requests = "^2.25.1"
singer-sdk = "^0.3.1"
backoff = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
responses = "^0.13.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-harvest-engine = 'target_harvest_engine.target:TargetHarvestEngine.cli'
